--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -13,6 +13,9 @@ jobs:
   images:
     name: SR-IOV images
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout
